fix: scrollbar gutter always stable

--- a/src/tags/search-dialog/search-dialog.style.module.scss
+++ b/src/tags/search-dialog/search-dialog.style.module.scss
@@ -1,5 +1,8 @@
 html:has(.dialog[open]) {
   overflow: hidden;
+}
+
+html {
   scrollbar-gutter: stable;
 }
 
